testdata/baselines/reference/submodule/compiler/jsFileCompilationTypeAliasSyntax.errors.txt
a.js(1,1): error TS8008: Type aliases can only be used in TypeScript files.


==== a.js (1 errors) ====
    type a = b;
    ~~~~~~~~~~~
!!! error TS8008: Type aliases can only be used in TypeScript files.